# sgfx

./: CMakeLists.txt  LICENSE  README.md  ibutterfree-doxy  sgfx-doxy
.circleci/: config.yml
examples/: CMakeLists.txt  animationcircle.c  doublebuffer.c  drawcircle.c  drawimage.c  drawline.c  drawprimitives.c  drawrect.c  drawtext.c  eventexample.c  helloworld.c
examples/lua/: drawPrimitives.lua
examples/resources/images/: IButterFree.ppm
includes/core/: ibutterfree.h  ibutterfree_draw.h  ibutterfree_event.h  ibutterfree_font.h  ibutterfree_image.h  ibutterfree_surface.h  sgfx.h  sgfx_draw.h  sgfx_event.h  sgfx_font.h  sgfx_image.h  sgfx_surface.h
includes/utils/: ibutterfree_config.h  ibutterfree_definitions.h  ibutterfree_font8x8_basic.h  ibutterfree_log.h  ibutterfree_upng.h  sgfx_config.h  sgfx_definitions.h  sgfx_font8x8_basic.h  sgfx_log.h  sgfx_upng.h
scripts/: format-source-code.sh
src/: CMakeLists.txt
src/core/: ibutterfree.c  ibutterfree_draw.c  ibutterfree_event.c  ibutterfree_font.c  ibutterfree_image.c  ibutterfree_lua.c  ibutterfree_surface.c  sgfx.c  sgfx_draw.c  sgfx_event.c  sgfx_font.c  sgfx_image.c  sgfx_lua.c  sgfx_surface.c
src/utils/: ibutterfree_config.c  ibutterfree_error_handler.c  ibutterfree_log.c  ibutterfree_upng.c  sgfx_config.c  sgfx_error_handler.c  sgfx_upng.c
toolchains/: bbblack-toolchain.cmake  clang-toolchain.cmake  odroid-c2-toolchain.cmake  pi-toolchain.cmake  rpi1-toolchain.cmake  rpi2-toolchain.cmake
